Mobile app templates: QString::fromLatin1 instead of fromAscii

Task-number: QTCREATORBUG-6879

Change-Id: I0a98df8a7bfd588909886b322e0b87106a4f4c37
Reviewed-by: Denis Mingulov <denis@mingulov.com>
Reviewed-by: Kai Koehne <kai.koehne@nokia.com>