share/qtcreator/templates/mobileapp/mainwindow.cpp
@@ -19,7 +19,7 @@ void MainWindow::setOrientation(ScreenOrientation orientation)
 #if defined(Q_OS_SYMBIAN)
     // If the version of Qt on the device is < 4.7.2, that attribute won't work
     if (orientation != ScreenOrientationAuto) {
-        const QStringList v = QString::fromAscii(qVersion()).split(QLatin1Char('.'));
+        const QStringList v = QString::fromLatin1(qVersion()).split(QLatin1Char('.'));
         if (v.count() == 3 && (v.at(0).toInt() << 16 | v.at(1).toInt() << 8 | v.at(2).toInt()) < 0x040702) {
             qWarning("Screen orientation locking only supported with Qt 4.7.2 and above");
             return;
